--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "my-app",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "antd": "^4.2.0",
+    "axios": "^0.19.2",
+    "babel-core": "^6.26.3",
+    "browserslist": "^4.12.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
